# meteocalc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: auto_test.yml  code_quality.yml
.ruff_cache/0.14.14/: 2546086709805100215
meteocalc/: core.py  thermodynamics.py
meteocalc/lib/thermodynamics/: dew_point_modular.py  wet_bulb_modular.py
src/meteocalc/dewpoint/: _dewpoint_constants.py  _dewpoint_equations.py  _enums.py  _jit_equations.py  _solver_method.py  _types.py  core.py
src/meteocalc/shared/: _enum_tools.py  _shared_enums.py
src/meteocalc/vapor/: __init__.py  __jit_funcs.py  _enums.py  _jit_equations.py  _types.py  _vapor_constants.py  _vapor_equations.py  core.py  nohup.out
test/: conftest.py  pytest.ini  test_davies_jones.py  test_davies_jones_wet_bulb.py  test_dew_point.py  test_wetBulb.py
test/vapor/: _jit_equations test.py  _jit_equations_test.py  _vapor_equation_test.py
tests/dewpoint/: test_buck_equation_scalar.py  test_buck_equation_vectorised.py  test_dewpoint_approximation.py  test_dewpoint_inversion_class.py  test_dewpoint_solver.py  test_dewpoint_using_solver.py  test_frostpoint_solver.py  test_get_frostpoint_approximation.py  test_magnus_equation_interface.py  test_magnus_equation_scalar.py  test_magnus_equation_vectorised.py
tests/vapor/: _jit_equations_test.py  _vapor_equation_test.py  test_vapor_equations.py
