[metadata]
name = meteocalc
version = 0.1.0
author = Your Name
description = Feature engineering and preprocessing toolkit for weather classification using Meteostat, pvlib, and GEE.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/yourusername/meteocalc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3
    numpy>=1.20
    pvlib>=0.10.0
    meteostat>=1.6.5
    scikit-learn>=1.1
    xarray
    tqdm

[options.extras_require]
gee =
    earthengine-api>=0.1.331
    geemap>=0.18
cds =
    cdsapi
dev =
    black
    isort
    flake8
    pytest
